--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohan Rashingkar</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
     <div class="top-buttons">
@@ -18,17 +17,9 @@
         <button id="name-button">Rohan Rashingkar</button>
     </div>
 
-    <img src="RohanWebsitePhoto.png" width="277" height="250">
 
     <div class="text-content">
-        <h1>Hi, I'm Rohan!</h1>
-        <h2>I'm studying CS and Applied Math at Vanderbilt University.
-            As an aspiring software engineer, I'm eager to explore various domains of CS, whether it be deep learning or full-stack development. <br><br>
-            I'm currently researching Temporal Graph Networks (TGNs) 
-            to analyze consciousness during seizures as a VISE Summer 
-            Fellow in the BIEN Lab at Vanderbilt Medical Center. <br><br>
-            In my free time, I follow the 49ers and play fantasy football. I also enjoy cooking new recipes and working out.
-        </h2>
+        <h1>Coming soon...</h1>
       </div>
       
     <script src="script.js"></script>
