--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
 </head>
 <body>
+    <a href="./home"></a>
     <div class="top-buttons">
         <button id = 'home-button'>Home</button>
         <button id = 'projects-button'>Projects</button>
