--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <a href="./projects"></a>
     <div class="top-buttons">
         <button id = 'home-button'>Home</button>
         <button id = 'projects-button'>Projects</button>
