--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     
 </head>
 <body>
-    <a href="./home"></a>
-    <div class="top-buttons">
-        <button id = 'home-button'>Home</button>
-        <button id = 'projects-button'>Projects</button>
-        <button id = 'linkedin-button'>LinkedIn</button>
-        <button id = 'github-button'>GitHub</button>
-    </div>
-    <div class="header">
-        <button id="name-button">Rohan Rashingkar</button>
+    <div class="nav-container">
+        <div class="header">
+            <button id="name-button">Rohan Rashingkar</button>
+        </div>
+    
+        <div class="top-buttons">
+            <button id = 'home-button'>Home</button>
+            <button id = 'projects-button'>Projects</button>
+            <button id = 'linkedin-button'>LinkedIn</button>
+            <button id = 'github-button'>GitHub</button>
+        </div>
     </div>
 
     <img src="RohanWebsitePhoto.png" width="277" height="250">
