Fixing spacing again

--- a/projects.html
+++ b/projects.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <a href="./projects"></a>
-    <div class="top-buttons">
-        <button id = 'home-button'>Home</button>
-        <button id = 'projects-button'>Projects</button>
-        <button id = 'linkedin-button'>LinkedIn</button>
-        <button id = 'github-button'>GitHub</button>
-    </div>
-    <div class="header">
-        <button id="name-button">Rohan Rashingkar</button>
+    <div class="nav-container">
+        <div class="header">
+            <button id="name-button">Rohan Rashingkar</button>
+        </div>
+    
+        <div class="top-buttons">
+            <button id = 'home-button'>Home</button>
+            <button id = 'projects-button'>Projects</button>
+            <button id = 'linkedin-button'>LinkedIn</button>
+            <button id = 'github-button'>GitHub</button>
+        </div>
     </div>
 
 
