--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,33 @@
     </div>
 
 
-    <div class="text-content">
-        <h1>Coming soon...</h1>
-      </div>
+    <!DOCTYPE html>
+<html>
+<head>
+    <title>My Projects</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <div class="project-container">
+        <div class="project">
+            <img src="project1.jpg" alt="Project 1">
+            <div class="project-description">
+                <h3>Project 1</h3>
+                <p>This is a description of project 1.</p>
+            </div>
+        </div>
+
+        <div class="project">
+            <img src="project2.jpg" alt="Project 2">
+            <div class="project-description">
+                <h3>Project 2</h3>
+                <p>This is a description of project 2.</p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+
       
     <script src="script.js"></script>
 </body>
