--- a/projects.html
+++ b/projects.html
@@ -21,34 +21,34 @@
 
     <div class="project-container">
         <div class="project">
-            <img src="project1.jpg" alt="Project 1">
+            <img src="OurBlueWorld.png" alt="Error: Image Failed to Load" width="40%">
             <div class="project-description">
                 <h3>OurBlueWorld</h3>
-                <p>This is a description of project 1.</p>
+                <p>Full-stack webapp that tracks carbon footprint across communities. Powered by React.js, Flask, and MongoDB and won Best Environmental Project at VandyHacks IX.</p>
                 <a href="https://github.com/aryang4rg/OurBlueWorld"target="_blank">View Code</a> <!-- Add link to the code here -->
             </div>
         </div>
 
         <div class="project">
-            <img src="project2.jpg" alt="Project 2">
+            <img src="PersonalWebsite.png" alt="Error: Image Failed to Load" width="65%">
             <div class="project-description">
                 <h3>Personal Website</h3>
-                <p>This is a description of project 2.</p>
+                <p>Webpage hosted by GitHub Pages that displays my personal portfolio, built entirely from scratch with HTML, CSS, and JavaScript.</p>
                 <a href="https://github.com/22rohanr/22rohanr.github.io"target="_blank">View Code</a> <!-- Add link to the code here -->
             </div>
         </div>
 
         <div class="project">
-            <img src="project3.jpg" alt="Project 3">
+            <img src="project3.jpg" alt="Error: Image Failed to Load">
             <div class="project-description">
-                <h3>Multilayer Perceptron</h3>
+                <h3>Multi-layer Perceptron</h3>
                 <p>This is a description of project 3.</p>
                 <a href="https://github.com/22rohanr/Neural-Network"target="_blank">View Code</a> <!-- Add link to the code here -->
             </div>
         </div>
 
         <div class="project">
-            <img src="project4.jpg" alt="Project 4">
+            <img src="project4.jpg" alt="Error: Image Failed to Load">
             <div class="project-description">
                 <h3>Pascal Compiler</h3>
                 <p>This is a description of project 4.</p>
