--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
             <img src="PersonalWebsite.png" alt="Error: Image Failed to Load" width="65%">
             <div class="project-description">
                 <h3>Personal Website</h3>
-                <p>Webpage hosted by GitHub Pages that displays my personal portfolio, built entirely from scratch with HTML, CSS, and JavaScript.</p>
+                <p>Webpage hosted by GitHub Pages that displays my personal portfolio. Built entirely from scratch with HTML, CSS, and JavaScript.</p>
                 <a href="https://github.com/22rohanr/22rohanr.github.io"target="_blank">View Code</a> <!-- Add link to the code here -->
             </div>
         </div>
@@ -42,7 +42,7 @@
             <img src="project3.jpg" alt="Error: Image Failed to Load">
             <div class="project-description">
                 <h3>Multi-layer Perceptron</h3>
-                <p>This is a description of project 3.</p>
+                <p>A 4-layer linear neural network capable of classifying images, written from scratch in Java. Equipped with a command-line interface and backpropagation algorithm for training.</p>
                 <a href="https://github.com/22rohanr/Neural-Network"target="_blank">View Code</a> <!-- Add link to the code here -->
             </div>
         </div>
@@ -51,7 +51,7 @@
             <img src="project4.jpg" alt="Error: Image Failed to Load">
             <div class="project-description">
                 <h3>Pascal Compiler</h3>
-                <p>This is a description of project 4.</p>
+                <p>Converts Pascal code to MIPS Assembly. Handles loops, functions, variables, conditionals, and more. Constructed using a scanner, parser, abstract syntax tree, variable environment, and code emitter.</p>
                 <a href="https://github.com/22rohanr/PASCAL-Compiler"target="_blank">View Code</a> <!-- Add link to the code here -->
             </div>
         </div>
