--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="project">
-            <img src="project3.jpg" alt="Error: Image Failed to Load">
+            <img src="MultilayerPerceptron.png" alt="Error: Image Failed to Load" width="70%">
             <div class="project-description">
                 <h3>Multi-layer Perceptron</h3>
                 <p>A 4-layer linear neural network capable of classifying images, written from scratch in Java. Equipped with a command-line interface and backpropagation algorithm for training.</p>
@@ -48,10 +48,10 @@
         </div>
 
         <div class="project">
-            <img src="project4.jpg" alt="Error: Image Failed to Load">
+            <img src="Compiler.png" alt="Error: Image Failed to Load" width = 67%>
             <div class="project-description">
                 <h3>Pascal Compiler</h3>
-                <p>Converts Pascal code to MIPS Assembly. Handles loops, functions, variables, conditionals, and more. Constructed using a scanner, parser, abstract syntax tree, variable environment, and code emitter.</p>
+                <p>Converts Pascal code to MIPS Assembly. Handles loops, functions, variables, conditionals, and more. Constructed in Java using a scanner, parser, abstract syntax tree, variable environment, and code emitter.</p>
                 <a href="https://github.com/22rohanr/PASCAL-Compiler"target="_blank">View Code</a> <!-- Add link to the code here -->
             </div>
         </div>
