--- a/index.html
+++ b/index.html
@@ -1,8 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=home" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rohan Rashingkar</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+    <div class="nav-container">
+        <div class="header">
+            <button id="name-button">Rohan Rashingkar</button>
+        </div>
+        <div class="top-buttons">
+            <button id = 'home-button'>Home</button>
+            <button id = 'projects-button'>Projects</button>
+            <button id = 'linkedin-button'>LinkedIn</button>
+            <button id = 'github-button'>GitHub</button>
+        </div>
+    </div>
+    <div class="content-container">
+        <div class="image">
+            <img src="RohanWebsitePhoto.png" width="277" height="250">
+        </div>
+        <div class="text-content">
+            <div class="description">
+                <h1>Hi, I'm Rohan!</h1>
+                <h2>I'm studying CS and Applied Math at Vanderbilt University.
+                    As an aspiring software engineer, I'm eager to explore various domains of CS, whether it be deep learning or full-stack development. <br><br>
+                    I'm currently researching Temporal Graph Networks (TGNs) 
+                    to analyze consciousness during seizures as a 
+                    <a href="https://www.vanderbilt.edu/vise/summer-undergraduate-program/"target="_blank">VISE Summer Fellow</a>
+                    in the 
+                    <a href="https://my.vanderbilt.edu/bien/"target="_blank">BIEN Lab</a> at Vanderbilt Medical Center. <br><br>
+                    In my free time, I follow the 49ers and play fantasy football. I also enjoy cooking new recipes and working out.
+                </h2>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
