--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>Hi, I'm Rohan!</h1>
                 <h2>I'm studying CS and Applied Math at Vanderbilt University.
                     As an aspiring software engineer, I'm eager to explore various domains of CS, whether it be deep learning or full-stack development. <br><br>
-                    I'm currently researching Temporal Graph Networks (TGNs) 
+                    I'm currently researching Residual Neural Networks (ResNets)
                     to analyze consciousness during seizures as a 
                     <a href="https://www.vanderbilt.edu/vise/summer-undergraduate-program/"target="_blank">VISE Summer Fellow</a>
                     in the 
