--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>I'm studying CS and Applied Math at Vanderbilt University.
                     As an aspiring software engineer, I'm eager to explore various domains of CS, whether it be deep learning or full-stack development. <br><br>
                     I'm currently researching Residual Neural Networks (ResNets)
-                    to analyze consciousness during seizures as a 
+                    to analyze seizures as a 
                     <a href="https://www.vanderbilt.edu/vise/summer-undergraduate-program/"target="_blank">VISE Summer Fellow</a>
                     in the 
                     <a href="https://my.vanderbilt.edu/bien/"target="_blank">BIEN Lab</a> at Vanderbilt Medical Center. <br><br>
