--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <h1>Hi, I'm Rohan!</h1>
                 <h2>I'm studying CS and Applied Math at Vanderbilt University.
                     As an aspiring software engineer, I'm eager to explore various domains of CS, whether it be deep learning or full-stack development. <br><br>
-                    I'm currently researching Residual Neural Networks (ResNets)
+                    I'm currently researching Convolutional Neural Networks (CNNs)
                     to analyze seizures as a 
-                    <a href="https://www.vanderbilt.edu/vise/summer-undergraduate-program/"target="_blank">VISE Summer Fellow</a>
+                    <a href="https://www.vanderbilt.edu/vise/summer-undergraduate-program/"target="_blank">Machine Learning Research Intern</a>
                     in the 
                     <a href="https://my.vanderbilt.edu/bien/"target="_blank">BIEN Lab</a> at Vanderbilt Medical Center. <br><br>
                     In my free time, I follow the 49ers and play fantasy football. I also enjoy cooking new recipes and working out.
